syntax = "proto3";

package protocol;

import "proto/status.proto";

option go_package = "protocol;protocol";

// 根据难度进行数据分析
message AnalysisByDifficultyReq
{
    int64 user_id = 1;
    int64 startTime = 2;
    int64 endTime = 3;
}

message AnalysisByDifficultyResp
{
    Status status = 1;
    map<int64,double> line = 2;
    map<int64,int64> pie = 3;
}

// 根据tags进行数据分析
message AnalysisByTagsReq
{
    int64 user_id = 1;
    int64 startTime = 2;
    int64 endTime = 3;
    repeated int64 tags = 4;
}

message AnalysisByTagsResp
{
    Status status = 1;
    map<int64,double> line = 2;
    map<int64,int64> pie = 3;
}